@startuml

skinparam ClassAttributeIconSize 0

package application <<Folder>> {
    class Main {
        +{static}main(String[] args): void
    }
    package Main.fxml <<Frame>> {
    }
    class SceneController {
        -graph: Graph
        +runDFS(): void
        +runNextStep(): void
        +runTopo(): void
        +runCutVertex(): void
    }
}

package graphcomponent <<Folder>> {
    class Edge{
        ' +setColor(): void
        ' +resetColor(): void
    }
    class Graph{
    }

    class Vertex{
        -controller: VertexController
        +changeColor(): void
        +resetColor(): void
    }
    package Vertex.fxml <<Frame>> {
    }
    class VertexController{
    }
}

package algorithm <<Folder>> {
    abstract class Algorithm {
        +{abstract}buildStep(): void
        +runNextStep(): boolean
    }

    class CutVertexBridgeFinding{
        +buildStep(): void
    }

    class DFS{
        +buildStep(): void
    }

    class TopologicalSort{
        +buildStep(): void
    }
}

package algorithmcontext <<Folder>> {
    class Context{
        -alg: Algorithm
        +play(): void
    }
}

package stepcomponent <<Folder>> {
    class DetailStep{
        +runNextStep(): void
    }

    class PseudoStep{
        +runNextStep(): void
    }

    class Step{
        -pseudoStep: PseudoStep
        -detailStep: DetailStep
    }
}

Vertex.fxml - VertexController
Main - Main.fxml
Main.fxml - SceneController
SceneController "1" o-- "1" Context
SceneController "1" o-- "1" Graph
SceneController "1" *-- "*" Edge
Algorithm "1" o-- "1" Graph
Algorithm "1" o-- "1" Step
CutVertexBridgeFinding --^ Algorithm
CutVertexBridgeFinding "1" o-- "*" Edge
CutVertexBridgeFinding "1" *-- "*" Vertex
DFS --^ Algorithm
DFS "1" o-- "*" Edge
DFS "1" o-- "*" Vertex
TopologicalSort --^ Algorithm
TopologicalSort "1" o-- "*" Vertex
Graph "1" *-- "*" Vertex
Vertex "1" o-- "1" VertexController
Context o-- Algorithm
DetailStep "1" *-- "*" Vertex 
DetailStep "1" *-- "*" Edge 
Step "1" o-- "1" DetailStep
Step "1" o-- "1" PseudoStep

@enduml
